Fixed z-index

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,7 @@ hr {
     height: 43px;
     top: 37px;
     left: 16px;
+    z-index: 1;
     .ellipse {
         @include flex-center;    
         box-sizing: border-box;
@@ -339,7 +340,7 @@ hr {
     width: 100%;
     height: 100%;
     background: #0E0F1A;
-    z-index: 1;
+    z-index: 2;
     transform: scale(0.8);
     @include transition;
     &.open {
